--- a/bee-storage/bee-storage/Cargo.toml
+++ b/bee-storage/bee-storage/Cargo.toml
@@ -17,6 +17,6 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-packable = { version = "0.5.0", default-features = false, features = [ "serde" ] }
+packable = { git = "https://github.com/pvdrz/common-rs", rev = "60f4b8b2109362e2c2e7f94d0034a96d21aa2c45", default-features = false, features = [ "serde" ] }
 serde = { version = "1.0.137", features = [ "derive" ], default-features = false }
 thiserror = { version = "1.0.31", default-features = false }
