--- a/bee-storage/bee-storage-sled/Cargo.toml
+++ b/bee-storage/bee-storage-sled/Cargo.toml
@@ -23,7 +23,7 @@ bee-storage = { version = "0.12.0", path = "../bee-storage", default-features = 
 bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false }
 
 num_cpus = { version = "1.13.1", default-features = false }
-packable = { version = "0.5.0", default-features = false, features = [ "serde" ] }
+packable = { git = "https://github.com/pvdrz/common-rs", rev = "60f4b8b2109362e2c2e7f94d0034a96d21aa2c45", default-features = false, features = [ "serde" ] }
 serde = { version = "1.0.137", default-features = false, features = [ "derive" ] }
 sled = { version = "0.34.7", default-features = false, features = [ "compression" ]}
 thiserror = { version = "1.0.31", default-features = false }
