Prepare crates for release

--- a/bee-node/bee-plugin/bee-plugin-version-checker/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-version-checker/Cargo.toml
@@ -11,7 +11,7 @@ keywords = [ "iota", "tangle", "bee", "plugin", "version" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-runtime = { version = "0.1.1-alpha", path = "../../../bee-runtime", default-features = false }
+bee-runtime = { version = "1.0.0-beta.1", path = "../../../bee-runtime", default-features = false }
 
 async-trait = { version = "0.1.56", default-features = false }
 futures = { version = "0.3.21", default-features = false }
