--- a/bee-runtime/Cargo.toml
+++ b/bee-runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-runtime"
-version = "0.1.1-alpha"
+version = "1.0.0-beta.1"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Runtime components and utilities for the bee framework"
@@ -17,7 +17,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-storage = { version = "0.12.0", path = "../bee-storage/bee-storage", default-features = false }
+bee-storage = { version = "1.0.0-beta.1", path = "../bee-storage/bee-storage", default-features = false }
 
 async-trait = { version = "0.1.56", default-features = false }
 dashmap = { version = "5.3.4", default-features = false }
@@ -25,4 +25,4 @@ futures = { version = "0.3.21", default-features = false, features = [ "std", "a
 log = { version = "0.4.17", default-features = false, features = [ "serde" ] }
 
 [dev-dependencies]
-tokio = { version = "1.19.2", default-features = false, features = [ "rt", "macros", "time" ] }
+tokio = { version = "1.20.0", default-features = false, features = [ "rt", "macros", "time" ] }
