--- a/bee-ledger/bee-ledger/Cargo.toml
+++ b/bee-ledger/bee-ledger/Cargo.toml
@@ -19,8 +19,8 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 [dependencies]
 bee-block = { version = "1.0.0-beta.1", path = "../../bee-block", default-features = false, features = [ "std" ] }
 bee-ledger-types = { version = "1.0.0-beta.1", path = "../bee-ledger-types", default-features = false }
-bee-runtime = { version = "0.1.1-alpha", path = "../../bee-runtime", default-features = false }
-bee-storage = { version = "0.12.0", path = "../../bee-storage/bee-storage", default-features = false }
+bee-runtime = { version = "1.0.0-beta.1", path = "../../bee-runtime", default-features = false }
+bee-storage = { version = "1.0.0-beta.1", path = "../../bee-storage/bee-storage", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false }
 
 async-trait = { version = "0.1.56", default-features = false }
