--- a/bee-network/bee-gossip/Cargo.toml
+++ b/bee-network/bee-gossip/Cargo.toml
@@ -41,7 +41,7 @@ full = [
 ]
 
 [dependencies]
-bee-runtime = { version = "0.1.1-alpha", path = "../../bee-runtime", default-features = false, optional = true }
+bee-runtime = { version = "1.0.0-beta.1", path = "../../bee-runtime", default-features = false, optional = true }
 
 async-trait = { version = "0.1.56", default-features = false, optional = true }
 futures = { version = "0.3.21", default-features = false, optional = true }
