--- a/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
@@ -17,8 +17,8 @@ bee-gossip = { version = "0.6.0", path = "../../../bee-network/bee-gossip", defa
 bee-ledger = { version = "0.7.0", path = "../../../bee-ledger/bee-ledger", default-features = false }
 bee-protocol = { version = "0.2.0", path = "../../../bee-protocol/bee-protocol", default-features = false }
 bee-rest-api = { version = "0.2.0", path = "../../../bee-api/bee-rest-api", default-features = false }
-bee-runtime = { version = "0.1.1-alpha", path = "../../../bee-runtime", default-features = false }
-bee-storage = { version = "0.12.0", path = "../../../bee-storage/bee-storage", default-features = false }
+bee-runtime = { version = "1.0.0-beta.1", path = "../../../bee-runtime", default-features = false }
+bee-storage = { version = "1.0.0-beta.1", path = "../../../bee-storage/bee-storage", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../../../bee-tangle", default-features = false }
 
 async-trait = { version = "0.1.56", default-features = false }
