--- a/bee-storage/bee-storage-rocksdb/Cargo.toml
+++ b/bee-storage/bee-storage-rocksdb/Cargo.toml
@@ -19,7 +19,7 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 [dependencies]
 bee-block = { version = "1.0.0-beta.1", path = "../../bee-block", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false }
-bee-storage = { version = "0.12.0", path = "../bee-storage", default-features = false }
+bee-storage = { version = "1.0.0-beta.1", path = "../bee-storage", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false }
 
 num_cpus = { version = "1.13.1", default-features = false }
