--- a/bee-storage/bee-storage/Cargo.toml
+++ b/bee-storage/bee-storage/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-storage"
-version = "0.12.0"
+version = "1.0.0-beta.1"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "A general purpose storage backend crate with key value abstraction API"
@@ -18,5 +18,5 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
 packable = { version = "0.5.0", default-features = false, features = [ "serde" ] }
-serde = { version = "1.0.137", features = [ "derive" ], default-features = false }
+serde = { version = "1.0.139", features = [ "derive" ], default-features = false }
 thiserror = { version = "1.0.31", default-features = false }
