--- a/bee-network/bee-gossip/Cargo.toml
+++ b/bee-network/bee-gossip/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-gossip"
-version = "0.6.0"
+version = "1.0.0-beta.1"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Allows peers in the same IOTA network to exchange gossip messages with each other."
@@ -45,22 +45,22 @@ bee-runtime = { version = "1.0.0-beta.1", path = "../../bee-runtime", default-fe
 
 async-trait = { version = "0.1.56", default-features = false, optional = true }
 futures = { version = "0.3.21", default-features = false, optional = true }
-hashbrown = { version = "0.12.1", default-features = false, features = [ "ahash", "inline-more" ] }
+hashbrown = { version = "0.12.3", default-features = false, features = [ "ahash", "inline-more" ] }
 libp2p = { version = "0.45.1", default-features = false, optional = true }
 libp2p-core = { version = "0.33.0", default-features = false }
 log = { version = "0.4.17", default-features = false, optional = true }
-once_cell = { version = "1.12.0", default-features = false, optional = true }
+once_cell = { version = "1.13.0", default-features = false, optional = true }
 rand = { version = "0.8.5", default-features = false, optional = true }
-serde = { version = "1.0.137", default-features = false, features = [ "derive" ], optional = true }
+serde = { version = "1.0.139", default-features = false, features = [ "derive" ], optional = true }
 thiserror = { version = "1.0.31", default-features = false, optional = true }
-tokio = { version = "1.19.2", default-features = false, features = [ "macros", "rt", "time" ], optional = true }
+tokio = { version = "1.20.0", default-features = false, features = [ "macros", "rt", "time" ], optional = true }
 tokio-stream = { version = "0.1.9", default-features = false, features = [ "time" ], optional = true }
 
 [dev-dependencies]
 fern = { version = "0.6.1", default-features = false }
 hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
-serial_test = { version = "0.7.0", default-features = false }
-tokio = { version = "1.19.2", default-features = false, features = [ "io-std", "io-util", "macros", "rt", "rt-multi-thread", "signal", "time" ] }
+serial_test = { version = "0.8.0", default-features = false }
+tokio = { version = "1.20.0", default-features = false, features = [ "io-std", "io-util", "macros", "rt", "rt-multi-thread", "signal", "time" ] }
 
 [[example]]
 name = "chat"
