--- a/bee-protocol/bee-protocol-types/Cargo.toml
+++ b/bee-protocol/bee-protocol-types/Cargo.toml
@@ -18,6 +18,6 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
 bee-block = { version = "1.0.0-beta.1", path = "../../bee-block", default-features = false, features = [ "serde" ] }
-bee-gossip = { version = "0.6.0", path = "../../bee-network/bee-gossip", default-features = false }
+bee-gossip = { version = "1.0.0-beta.1", path = "../../bee-network/bee-gossip", default-features = false }
 
 serde = { version = "1.0.137", default-features = false, features = [ "derive" ]}
