--- a/bee-protocol/bee-protocol/Cargo.toml
+++ b/bee-protocol/bee-protocol/Cargo.toml
@@ -19,7 +19,7 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 [dependencies]
 bee-autopeering = { version = "0.5.0", path = "../../bee-network/bee-autopeering", default-features = false }
 bee-block = { version = "1.0.0-beta.1", path = "../../bee-block", default-features = false, features = [ "serde" ] }
-bee-gossip = { version = "0.6.0", path = "../../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
+bee-gossip = { version = "1.0.0-beta.1", path = "../../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false }
 bee-pow = { version = "1.0.0-alpha.1", default-features = false }
 bee-protocol-types = { version = "1.0.0-alpha.1", path = "../bee-protocol-types", default-features = false }
