--- a/bee-ledger/bee-ledger-types/Cargo.toml
+++ b/bee-ledger/bee-ledger-types/Cargo.toml
@@ -18,17 +18,9 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
 bee-block = { version = "1.0.0-beta.2", path = "../../bee-block", default-features = false, features = [ "std" ] }
-bee-ternary = { version = "1.0.0-alpha.1", default-features = false, features = [ "serde" ], optional = true }
 
-bytemuck = { version = "1.9.1", default-features = false, optional = true }
 packable = { version = "0.5.0", default-features = false, features = [ "serde", "io" ] }
-rand = { version = "0.8.5", default-features = false, features = [ "min_const_gen" ], optional = true }
 thiserror = { version = "1.0.31", default-features = false }
 
 [features]
-rand = [
-    "bee-block/rand",
-    "dep:bee-ternary",
-    "dep:bytemuck",
-    "dep:rand",
-]
+rand = [ "bee-block/rand" ]
