--- a/bee-ledger/bee-ledger-types/Cargo.toml
+++ b/bee-ledger/bee-ledger-types/Cargo.toml
@@ -21,3 +21,6 @@ bee-block = { version = "1.0.0-beta.2", path = "../../bee-block", default-featur
 
 packable = { version = "0.5.0", default-features = false, features = [ "serde", "io" ] }
 thiserror = { version = "1.0.31", default-features = false }
+
+[features]
+rand = [ "bee-block/rand" ]
