--- a/bee-protocol/bee-protocol-types/Cargo.toml
+++ b/bee-protocol/bee-protocol-types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-protocol-types"
-version = "1.0.0-alpha.1"
+version = "1.0.0-beta.1"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "All types enabling the IOTA protocol."
@@ -18,6 +18,6 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
 bee-block = { version = "1.0.0-beta.2", path = "../../bee-block", default-features = false, features = [ "serde" ] }
-bee-gossip = { version = "0.6.0", path = "../../bee-network/bee-gossip", default-features = false }
+bee-gossip = { version = "1.0.0-beta.1", path = "../../bee-network/bee-gossip", default-features = false }
 
-serde = { version = "1.0.137", default-features = false, features = [ "derive" ]}
+serde = { version = "1.0.139", default-features = false, features = [ "derive" ]}
