--- a/bee-inx/Cargo.toml
+++ b/bee-inx/Cargo.toml
@@ -11,7 +11,7 @@ keywords = [ "iota", "plugin", "node", "inx", "bee" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-block = { path = "../bee-block", version = "1.0.0-beta.3", default-features = false, features = [ "inx", "std" ] }
+bee-block = { version = "1.0.0-beta.3", path = "../bee-block", default-features = false, features = [ "inx", "std" ] }
 
 futures = { version = "0.3.21", default-features = false }
 inx = { version = "1.0.0-beta.2", default-features = false }
