--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,6 +6,7 @@
 /bee-autopeering/ alexander.schmidt@iota.org  thibault@iota.org
 /bee-api/         samuel.rufinatscha@iota.org thibault@iota.org
 /bee-block/       thibault@iota.org           thoralf.mueller@iota.org
+/bee-inx/         jochen.goertler@iota.org
 /bee-gossip/      alexander.schmidt@iota.org  thibault@iota.org
 /bee-ledger/      thibault@iota.org           samuel.rufinatscha@iota.org
 /bee-node/        thibault@iota.org           alexander.schmidt@iota.org samuel.rufinatscha@iota.org
