--- a/bee-inx/Cargo.toml
+++ b/bee-inx/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-inx"
-version = "0.1.0"
+version = "1.0.0-beta.1"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Rust bindings for IOTA node extensions (INX)"
