--- a/bee-inx/Cargo.toml
+++ b/bee-inx/Cargo.toml
@@ -16,7 +16,7 @@ bee-block = { version = "1.0.0-beta.3", path = "../bee-block", default-features 
 futures = { version = "0.3.21", default-features = false }
 inx = { version = "1.0.0-beta.2", default-features = false }
 thiserror = { version = "1.0.31", default-features = false }
-packable = { version = "0.5.0", default-features = false }
+packable = { git = "https://github.com/pvdrz/common-rs", rev = "60f4b8b2109362e2c2e7f94d0034a96d21aa2c45", default-features = false }
 
 [dev-dependencies]
 tokio = { version = "1.18", default-features = false, features = [ "macros", "rt-multi-thread" ] }
