--- a/bee-inx/Cargo.toml
+++ b/bee-inx/Cargo.toml
@@ -19,5 +19,7 @@ thiserror = { version = "1.0.31", default-features = false }
 packable = { version = "0.5.0", default-features = false }
 
 [dev-dependencies]
+bee-block = { version = "1.0.0-beta.3", path = "../bee-block", default-features = false, features = [ "inx", "rand", "std" ] }
+
 tokio = { version = "1.18", default-features = false, features = [ "macros", "rt-multi-thread" ] }
 futures = { version = "0.3", default-features = false }
