--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -17,7 +17,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-api-types = { version = "1.0.0-beta.1", path = "../bee-api-types", default-features = false, features = [ "peer" ] }
+bee-api-types = { version = "1.0.0-beta.1", path = "../bee-api-types", default-features = false, features = [ "axum", "peer" ] }
 bee-block = { version = "1.0.0-beta.3", path = "../../bee-block", default-features = false, features = [ "dto" ] }
 bee-gossip = { version = "1.0.0-beta.1", path = "../../bee-network/bee-gossip", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false }
