--- a/bee-block/Cargo.toml
+++ b/bee-block/Cargo.toml
@@ -30,7 +30,7 @@ hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
 inx-bindings = { package = "inx", version = "1.0.0-beta.4", default-features = false, optional = true }
 iota-crypto = { version = "0.13.0", default-features = false, features = [ "ed25519", "blake2b" ] }
 iterator-sorted = { version = "0.1.0", default-features = false }
-packable = { git = "https://github.com/pvdrz/common-rs", rev = "7700d0fdc897b41751f4a3ddb2570f053f1df34a", default-features = false, features = [ "serde", "primitive-types" ] }
+packable = { version = "0.6.0", default-features = false, features = [ "serde", "primitive-types" ] }
 prefix-hex = { version = "0.4.0", default-features = false, features = [ "primitive-types" ] }
 primitive-types = { version = "0.11.1", default-features = false, features = [ "serde" ] }
 rand = { version = "0.8.5", default-features = false, features = [ "min_const_gen", "std_rng" ], optional = true }
