--- a/bee-node/bee-node/Cargo.toml
+++ b/bee-node/bee-node/Cargo.toml
@@ -40,7 +40,7 @@ hex = { version = "0.4.3", default-features = false }
 iota-crypto = { version = "0.13.0", default-features = false, features = [ "ed25519", "random", "blake2b" ] }
 log = { version = "0.4.17", default-features = false }
 multiaddr = { version = "0.14.0", default-features = false }
-packable = { git = "https://github.com/pvdrz/common-rs", rev = "7700d0fdc897b41751f4a3ddb2570f053f1df34a", default-features = false, features = [ "io" ] }
+packable = { version = "0.6.0", default-features = false, features = [ "io" ] }
 pkcs8 = { version = "0.8.0", default-features = false, features = [ "alloc", "pem", "std" ] }
 rand = { version = "0.8.5", default-features = false }
 rpassword = { version = "6.0.1", default-features = false }
