--- a/bee-storage/bee-storage-test/Cargo.toml
+++ b/bee-storage/bee-storage-test/Cargo.toml
@@ -22,4 +22,4 @@ bee-ledger-types = { version = "1.0.0-beta.4", path = "../../bee-ledger/bee-ledg
 bee-storage = { version = "1.0.0-beta.1", path = "../bee-storage", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false, features = [ "rand" ] }
 
-packable = { git = "https://github.com/pvdrz/common-rs", rev = "7700d0fdc897b41751f4a3ddb2570f053f1df34a", default-features = false, features = [ "serde" ] }
+packable = { version = "0.6.0", default-features = false, features = [ "serde" ] }
