--- a/bee-storage/bee-storage/Cargo.toml
+++ b/bee-storage/bee-storage/Cargo.toml
@@ -17,6 +17,6 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-packable = { git = "https://github.com/pvdrz/common-rs", rev = "7700d0fdc897b41751f4a3ddb2570f053f1df34a", default-features = false, features = [ "serde" ] }
+packable = { version = "0.6.0", default-features = false, features = [ "serde" ] }
 serde = { version = "1.0.143", features = [ "derive" ], default-features = false }
 thiserror = { version = "1.0.32", default-features = false }
