--- a/bee-tangle/Cargo.toml
+++ b/bee-tangle/Cargo.toml
@@ -26,7 +26,7 @@ bitflags = { version = "1.3.2", default-features = false }
 futures = { version = "0.3.21", default-features = false }
 hashbrown = { version = "0.12.1", default-features = false, features = [ "raw", "ahash" ] }
 log = { version = "0.4.17", default-features = false }
-packable = { version = "0.6.0", default-features = false, features = [ "serde" ] }
+packable = { git = "https://github.com/thibault-martinez/common-rs", rev = "7f62d26eecaaf26ef52ec597ea7dc1ade5fcc949", default-features = false, features = [ "serde" ] }
 rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
 ref-cast = { version = "1.0.9", default-features = false }
 serde = { version = "1.0.143", default-features = false, features = [ "derive" ] }
