--- a/bee-block/fuzz/Cargo.toml
+++ b/bee-block/fuzz/Cargo.toml
@@ -12,7 +12,7 @@ cargo-fuzz = true
 bee-block = { path = "..", default-features = false }
 
 libfuzzer-sys = { version = "0.4.3", default-features = false }
-packable = { git = "https://github.com/thibault-martinez/common-rs", rev = "7f62d26eecaaf26ef52ec597ea7dc1ade5fcc949", default-features = false }
+packable = { version = "0.6.1", default-features = false }
 
 # Prevent this from interfering with workspaces
 [workspace]
