--- a/bee-ledger/bee-ledger/Cargo.toml
+++ b/bee-ledger/bee-ledger/Cargo.toml
@@ -29,7 +29,7 @@ futures = { version = "0.3.23", default-features = false }
 hashbrown = { version = "0.12.3", default-features = false }
 iota-crypto = { version = "0.14.0", default-features = false, features = [ "blake2b" ] }
 log = { version = "0.4.17", default-features = false }
-packable = { git = "https://github.com/thibault-martinez/common-rs", rev = "7f62d26eecaaf26ef52ec597ea7dc1ade5fcc949", default-features = false, features = [ "serde", "io" ] }
+packable = { version = "0.6.1", default-features = false, features = [ "serde", "io" ] }
 prefix-hex = { version = "0.4.0", default-features = false }
 ref-cast = { version = "1.0.9", default-features = false }
 reqwest = { version = "0.11.11", default-features = false, features = [ "default-tls", "stream" ] }
