--- a/bee-protocol/bee-protocol/Cargo.toml
+++ b/bee-protocol/bee-protocol/Cargo.toml
@@ -36,7 +36,7 @@ fxhash = { version = "0.2.1", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 log = { version = "0.4.17", default-features = false }
 num_cpus = { version = "1.13.1", default-features = false }
-packable = { git = "https://github.com/thibault-martinez/common-rs", rev = "7f62d26eecaaf26ef52ec597ea7dc1ade5fcc949", default-features = false }
+packable = { version = "0.6.1", default-features = false }
 parking_lot = { version = "0.12.1", default-features = false }
 rand = { version = "0.8.5", default-features = false }
 ref-cast = { version = "1.0.9", default-features = false }
