--- a/bee-storage/bee-storage/Cargo.toml
+++ b/bee-storage/bee-storage/Cargo.toml
@@ -17,6 +17,6 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-packable = { git = "https://github.com/thibault-martinez/common-rs", rev = "7f62d26eecaaf26ef52ec597ea7dc1ade5fcc949", default-features = false, features = [ "serde" ] }
+packable = { version = "0.6.1", default-features = false, features = [ "serde" ] }
 serde = { version = "1.0.143", features = [ "derive" ], default-features = false }
 thiserror = { version = "1.0.32", default-features = false }
