--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -17,11 +17,11 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-api-types = { version = "1.0.0-beta.5", path = "../bee-api-types", default-features = false, features = [ "axum", "peer" ] }
-bee-block = { version = "1.0.0-beta.6", path = "../../bee-block", default-features = false, features = [ "dto" ] }
+bee-api-types = { version = "1.0.0-beta.6", path = "../bee-api-types", default-features = false, features = [ "axum", "peer" ] }
+bee-block = { version = "1.0.0-beta.7", path = "../../bee-block", default-features = false, features = [ "dto" ] }
 bee-gossip = { version = "1.0.0-beta.2", path = "../../bee-network/bee-gossip", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false }
-bee-pow = { version = "1.0.0-alpha.1", default-features = false }
+bee-pow = { version = "1.0.0-beta.1", default-features = false }
 bee-protocol = { version = "0.2.2", path = "../../bee-protocol/bee-protocol", default-features = false }
 bee-runtime = { version = "1.0.0-beta.1", path = "../../bee-runtime", default-features = false  }
 bee-storage = { version = "1.0.0-beta.1", path = "../../bee-storage/bee-storage", default-features = false }
