--- a/bee-block/Cargo.toml
+++ b/bee-block/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-block"
-version = "1.0.0-beta.6"
+version = "1.0.0-beta.7"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Implementation of the IOTA protocol block layouts"
@@ -18,7 +18,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-pow = { version = "1.0.0-alpha.1", default-features = false }
+bee-pow = { version = "1.0.0-beta.1", default-features = false }
 bee-ternary = { version = "1.0.0-alpha.1", default-features = false, features = [ "serde" ] }
 
 bech32 = { version = "0.9.1", default-features = false }
