Update libp2p dep

--- a/bee-network/bee-gossip/Cargo.toml
+++ b/bee-network/bee-gossip/Cargo.toml
@@ -46,8 +46,8 @@ bee-runtime = { version = "1.0.0", path = "../../bee-runtime", default-features 
 async-trait = { version = "0.1.57", default-features = false, optional = true }
 futures = { version = "0.3.23", default-features = false, optional = true }
 hashbrown = { version = "0.12.3", default-features = false, features = [ "ahash", "inline-more" ] }
-libp2p = { version = "0.45.1", default-features = false, optional = true }
-libp2p-core = { version = "0.33.0", default-features = false }
+libp2p = { version = "0.47.0", default-features = false, optional = true }
+libp2p-core = { version = "0.35.0", default-features = false }
 log = { version = "0.4.17", default-features = false, optional = true }
 once_cell = { version = "1.13.0", default-features = false, optional = true }
 rand = { version = "0.8.5", default-features = false, optional = true }
@@ -59,7 +59,7 @@ tokio-stream = { version = "0.1.9", default-features = false, features = [ "time
 [dev-dependencies]
 fern = { version = "0.6.1", default-features = false }
 hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
-serial_test = { version = "0.9.0", default-features = false }
+serial_test = { version = "0.9.0", default-features = false, features = [ "async" ] }
 tokio = { version = "1.20.1", default-features = false, features = [ "io-std", "io-util", "macros", "rt", "rt-multi-thread", "signal", "time" ] }
 
 [[example]]
