--- a/bee-ledger/bee-ledger/Cargo.toml
+++ b/bee-ledger/bee-ledger/Cargo.toml
@@ -20,7 +20,7 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 bee-block = { version = "1.0.0-beta.7", path = "../../bee-block", default-features = false, features = [ "std" ] }
 bee-ledger-types = { version = "1.0.0-beta.5", path = "../bee-ledger-types", default-features = false }
 bee-runtime = { version = "1.0.0-beta.1", path = "../../bee-runtime", default-features = false }
-bee-storage = { version = "1.0.0-beta.1", path = "../../bee-storage/bee-storage", default-features = false }
+bee-storage = { version = "1.0.0", path = "../../bee-storage/bee-storage", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false }
 
 async-trait = { version = "0.1.57", default-features = false }
