--- a/bee-runtime/Cargo.toml
+++ b/bee-runtime/Cargo.toml
@@ -17,7 +17,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-storage = { version = "1.0.0-beta.1", path = "../bee-storage/bee-storage", default-features = false }
+bee-storage = { version = "1.0.0", path = "../bee-storage/bee-storage", default-features = false }
 
 async-trait = { version = "0.1.57", default-features = false }
 dashmap = { version = "5.3.4", default-features = false }
