--- a/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
@@ -17,7 +17,7 @@ bee-gossip = { version = "1.0.0-beta.2", path = "../../../bee-network/bee-gossip
 bee-ledger = { version = "0.7.0", path = "../../../bee-ledger/bee-ledger", default-features = false }
 bee-protocol = { version = "0.2.0", path = "../../../bee-protocol/bee-protocol", default-features = false }
 bee-rest-api = { version = "0.2.0", path = "../../../bee-api/bee-rest-api", default-features = false }
-bee-runtime = { version = "1.0.0-beta.1", path = "../../../bee-runtime", default-features = false }
+bee-runtime = { version = "1.0.0", path = "../../../bee-runtime", default-features = false }
 bee-storage = { version = "1.0.0", path = "../../../bee-storage/bee-storage", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../../../bee-tangle", default-features = false }
 
