--- a/bee-node/bee-plugin/bee-plugin-mps/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-mps/Cargo.toml
@@ -13,7 +13,7 @@ homepage = "https://www.iota.org"
 [dependencies]
 bee-plugin = { version = "0.1.0", path = "../bee-plugin", default-features = false }
 bee-protocol = { version = "0.2.0", path = "../../../bee-protocol/bee-protocol", default-features = false }
-bee-runtime = { version = "1.0.0-beta.1", path = "../../../bee-runtime", default-features = false }
+bee-runtime = { version = "1.0.0", path = "../../../bee-runtime", default-features = false }
 
 async-trait = { version = "0.1.57", default-features = false }
 log = { version = "0.4.17", default-features = false }
