--- a/bee-node/bee-plugin/bee-plugin/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin/Cargo.toml
@@ -11,6 +11,6 @@ keywords = [ "iota", "tangle", "bee", "plugin" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-runtime = { version = "1.0.0-beta.1", path = "../../../bee-runtime", default-features = false }
+bee-runtime = { version = "1.0.0", path = "../../../bee-runtime", default-features = false }
 
 async-trait = { version = "0.1.57", default-features = false }
