--- a/bee-pow/Cargo.toml
+++ b/bee-pow/Cargo.toml
@@ -17,7 +17,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-ternary = { version = "1.0.0-alpha.1", default-features = false }
+bee-ternary = { version = "1.0.0", default-features = false }
 
 iota-crypto = { version = "0.14.0", default-features = false, features = [ "blake2b", "digest", "curl-p" ] }
 thiserror = { version = "1.0.32", default-features = false }
