--- a/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
@@ -13,7 +13,7 @@ homepage = "https://www.iota.org"
 [dependencies]
 bee-api-types = { version = "1.0.0-beta.7", path = "../../../bee-api/bee-api-types", default-features = false }
 bee-block = { version = "1.0.0-beta.7", path = "../../../bee-block", default-features = false }
-bee-gossip = { version = "1.0.0-beta.2", path = "../../../bee-network/bee-gossip", default-features = false }
+bee-gossip = { version = "1.0.0", path = "../../../bee-network/bee-gossip", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../../bee-ledger/bee-ledger", default-features = false }
 bee-protocol = { version = "0.2.0", path = "../../../bee-protocol/bee-protocol", default-features = false }
 bee-rest-api = { version = "0.2.0", path = "../../../bee-api/bee-rest-api", default-features = false }
