--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -18,7 +18,7 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
 bee-api-types = { version = "1.0.0-beta.7", path = "../bee-api-types", default-features = false, features = [ "axum", "peer" ] }
-bee-block = { version = "1.0.0-beta.7", path = "../../bee-block", default-features = false, features = [ "dto" ] }
+bee-block = { version = "1.0.0", path = "../../bee-block", default-features = false, features = [ "dto" ] }
 bee-gossip = { version = "1.0.0", path = "../../bee-network/bee-gossip", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false }
 bee-pow = { version = "1.0.0", path = "../../bee-pow", default-features = false }
