--- a/bee-storage/bee-storage-test/Cargo.toml
+++ b/bee-storage/bee-storage-test/Cargo.toml
@@ -17,7 +17,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-block = { version = "1.0.0-beta.7", path = "../../bee-block", default-features = false, features = [ "rand" ] }
+bee-block = { version = "1.0.0", path = "../../bee-block", default-features = false, features = [ "rand" ] }
 bee-ledger-types = { version = "1.0.0-beta.5", path = "../../bee-ledger/bee-ledger-types", default-features = false, features = [ "rand" ] }
 bee-storage = { version = "1.0.0", path = "../bee-storage", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false, features = [ "rand" ] }
