--- a/bee-api/bee-api-types/Cargo.toml
+++ b/bee-api/bee-api-types/Cargo.toml
@@ -19,7 +19,7 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 [dependencies]
 bee-block = { version = "1.0.0", path = "../../bee-block", default-features = false, features = [ "dto" ] }
 bee-ledger-types = { version = "1.0.0", path = "../../bee-ledger/bee-ledger-types", default-features = false }
-bee-protocol-types = { version = "1.0.0-beta.4", path = "../../bee-protocol/bee-protocol-types", default-features = false, optional = true }
+bee-protocol-types = { version = "1.0.0", path = "../../bee-protocol/bee-protocol-types", default-features = false, optional = true }
 
 axum = { version = "0.5.15", default-features = false, features = [ "json" ], optional =  true }
 serde = { version = "1.0.143", default-features = false, features = [ "derive" ] }
